--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "restaurant_list_with_CRUD",
+  "name": "restaurant_list_with_mongodb",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node models/seeds/restaurantSeeder.js"
   },
   "keywords": [],
   "author": "",
